added README and fixed some bugs

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -10,7 +10,7 @@ app.info=Upload app
 choose.file.msg=Choose file
 upload.success=upload was successful
 upload.failure=error occurred during upload
-upload.filenotchosen=File not choesen
+upload.filenotchosen=File not chosen
 
 upload.button=Upload
 
@@ -35,9 +35,10 @@ table.shareId=ShareId
 table.nofile=No uploaded files, files will appear here if messages +   you upload any.
 
 
-
+upload.select.file.first=File must be selected first !
 
 download.button=Download
+download.failure=Download failed
 
 
 upload.page.info=Upload and Download files
@@ -69,7 +70,7 @@ register.gotoverify=Already registered but need to verify email ?
 register.button=register
 register.success=Verification code send to mail
 register.failure=Error while registering
-register.different.passwords="Passwords do not match"
+register.different.passwords=Passwords do not match
 register.invalidemail=Invalid email
 register.message=Registration
 
@@ -80,4 +81,14 @@ verify.success=Account verified, please login
 verify.button=Verify
 
 
+# error messages
 
+error.username.already.used=Username is already used
+error.email.already.used=Email is already used
+
+error.verification.already.done=Account is already verified
+error.verification.code.expired=Verification code expired
+error.verification.wrong.code=Wrong verification code
+
+error.wrong.password=Wrong password
+error.user.not.found=User not found
