--- a/src/main/resources/messages/messages_sk.properties
+++ b/src/main/resources/messages/messages_sk.properties
@@ -32,7 +32,9 @@ table.size=Ve\u013ekos\u0165
 table.actions=Akcie
 table.shareId=ShareId
 
+upload.select.file.first=\u017diaden s\u00fabor !
 
+download.failure=S\u00fabor nestiahnut\u00fd, nastala chyba
 upload.page.info=Nahr\u00e1vaj a s\u0165ahuj s\u00fabory
 
 # navbar
@@ -71,3 +73,15 @@ verify.message=Verifik\u00e1cia
 verify.failure=Nespr\u00e1vny email alebo neplatn\u00fd overovac\u00ed k\u00f3d
 verify.button=Overi\u0165
 
+# error messages
+
+error.username.already.used=Pou\u017e\u00edvate\u013esk\u00e9 meno je obsaden\u00e9
+error.email.already.used=Email sa u\u017e pou\u017e\u00edva
+
+error.verification.already.done=\u00da\u010det u\u017e bol aktivovan\u00fd
+error.verification.code.expired=Verifika\u010dn\u00fd k\u00f3d je neplatn\u00fd
+error.verification.wrong.code=Nespr\u00e1vny verifika\u010dn\u00fd k\u00f3d
+
+
+error.wrong.password=Nespr\u00e1vne heslo
+error.user.not.found=Pou\u017e\u00edvate\u013esk\u00e9 meno neexistuje
