improved code, added way to create directories and also move files in directories

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -25,14 +25,18 @@ token.info=Validity of token in minutes:
 logout.button=Logout
 logout.ask=Do you want to log out ?
 
-delete.ask=Do you want to delete file
-delete.success=File deleted
+delete.ask=Do you want to delete
+delete.success=Deleted
 
 table.filename=Filename
 table.size=Size
 table.actions=Actions
 table.shareId=ShareId
+table.createdAt=Created at
 table.nofile=No uploaded files, files will appear here if messages +   you upload any.
+table.type.file=file
+table.type.dir=directory
+table.type=Type
 
 
 upload.select.file.first=File must be selected first !
@@ -80,6 +84,34 @@ verify.failure=Wrong email or bad code
 verify.success=Account verified, please login
 verify.button=Verify
 
+# modal 
+
+modal.confirm=confirm
+modal.cancel=cancel
+model.text=write here
+
+
+# create dir
+createDir.button=⊕ Create directory
+createDir.success=Directory created
+createDir.failure=Directory not created
+createDir.ask=Create directory
+
+
+
+dir.goback=Go back
+
+# rename
+rename.ask=Rename
+
+rename.success=Renaming was successful
+rename.failure=Error occurred
+rename.failure.name.used=Name is already used
+
+# move
+
+move.failure=Failed to move file or directory
+move.success=File or directory moved
 
 # error messages
 
