--- a/src/main/resources/messages/messages_sk.properties
+++ b/src/main/resources/messages/messages_sk.properties
@@ -4,7 +4,7 @@ app.info=Apka na nahr\u00e1vanie
 # upload page
 
 choose.file.msg=Vybra\u0165 s\u00fabor
-upload.success=Nahratie \u00faspe?né
+upload.success=Nahratie \u00faspe\u0161n\u00e9
 upload.failure=chyba pri nahravani
 upload.filenotchosen=\u017diaden vybran\u00fd s\u00fabor
 
@@ -25,12 +25,16 @@ logout.button=Odhl\u00e1si\u0165 sa
 logout.ask=Odhl\u00e1si\u0165 sa ?
 
 
-delete.ask=Odstra\u0148i\u0165 s\u00fabor
-delete.success=S\u00fabor odstr\u00e1nen\u00fd
+delete.ask=Odstr\u00e1ni\u0165
+delete.success=\u00daspe\u0161ne odstr\u00e1nen\u00fd
 table.filename=N\u00e1zov s\u00faboru
 table.size=Ve\u013ekos\u0165
 table.actions=Akcie
+table.createdAt=Vytvoren\u00e9
 table.shareId=ShareId
+table.type.file=s\u00fabor
+table.type.dir=adres\u00e1r
+table.type=Typ
 
 upload.select.file.first=\u017diaden s\u00fabor !
 
@@ -50,6 +54,8 @@ login.message=Prihl\u00e1senie
 login.button=Prihl\u00e1si\u0165 sa
 login.success=
 login.failure=Prihl\u00e1senie neuspe\u0161n\u00e9, boli zadan\u00e9 chybn\u00e9 \u00fadaje
+
+
 
 
 # labels
@@ -72,6 +78,30 @@ verify.success=\u00da\u010det overen\u00fd, m\u00f4\u017eete sa prihl\u00e1si\u0
 verify.message=Verifik\u00e1cia
 verify.failure=Nespr\u00e1vny email alebo neplatn\u00fd overovac\u00ed k\u00f3d
 verify.button=Overi\u0165
+
+# modal 
+
+modal.confirm=potvrdi\u0165
+modal.cancel=preru\u0161i\u0165
+model.text=p\u00ed\u0161 tu
+
+# create dir
+createDir.button=âŠ• Nov\u00fd adres\u00e1r
+createDir.success=Adres\u00e1r vytvoren\u00fd
+createDir.failure=Adres\u00e1r nevytvoren\u00fd
+createDir.ask=Vytvori\u0165 adres\u00e1r
+
+# go back
+dir.goback=Nasp\u00e4\u0165
+# rename
+rename.ask=Premenova\u0165
+rename.success=\u00daspe\u0161ne premenovan\u00e9
+rename.failure=Nastala chyba
+rename.failure.name.used=Meno u\u017e je pou\u017e\u00edvan\u00e9
+
+
+move.failure=Nastala chyba pri pres\u00favan\u00ed
+move.success=S\u00fabor alebo adres\u00e1r presunut\u00fd
 
 # error messages
 
